# otobot

./: .env.sample  Cargo.toml  Dockerfile
.github/workflows/: image-deploy.yaml
src/: main.rs
