[package]
name = "otobot"
version = "0.1.0"
authors = ["naari3 <naari.named@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "fs", "sync"] }
futures = "0.3"

egg-mode = "0.15"
dotenv = "0.11"
rand = "0.8.3"
lindera = "0.7.1"
lindera-core = "0.7.1"
unicode-segmentation = "1.7.1"